--- a/index.html
+++ b/index.html
@@ -1,90 +1,121 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
 <head>
-	<meta charset="utf-8"/>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-	<title>Laszlovector</title>
-	<meta name="description" content=""/>
-	<meta name="viewport" content="width=device-width"/>
-	<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
-	<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" />
-        <!--<link rel="stylesheet" type="text/css" href="bower_components/swipebox/src/css/swipebox.css">-->
-	<link rel="stylesheet" type="text/css" href="bower_components/lightbox2/src/css/lightbox.css">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>Laszlovector</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" />
+    <link rel="stylesheet" type="text/css" href="bower_components/fancybox/source/jquery.fancybox.css?v=2.1.5" media="screen" />
+    <link rel="stylesheet" type="text/css" href="bower_components/fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" />
+    <link rel="stylesheet" type="text/css" href="bower_components/fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" />
+    <style type="text/css">
+        .isotope_w1_h2, .isotope_w1_h1 {
+            width: 280px;
+        }
 
-	<style type="text/css">
-		.isotope_w1_h2, .isotope_w1_h1 {
-			width: 280px;
-		}
+        .isotope_w1_h1 {
+            height: 160px;
+        }
 
-		.isotope_w1_h1 {
-			height: 160px;
-		}
-		
-		.isotope_w1_h2 {
-			height: 330px;
-		}
+        .isotope_w1_h2 {
+            height: 330px;
+        }
 
-		.referenceItems{
-			background-repeat:no-repeat;
-			background-size: contain;
-			display: block;
-		}
-	</style>
+        .referenceItems {
+            background-repeat: no-repeat;
+            background-size: contain;
+            display: block;
+        }
+    </style>
 </head>
 <body ng-app="laszlovector">
-	<!-- Menu start -->
-	<nav class="navbar navbar-default">
-		<div class="container-fluid">
-		<!-- Brand and toggle get grouped for better mobile display -->
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-      			</button>
-				<a class="navbar-brand" href="#">Brand</a>
-			</div>
-			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Link</a></li>
-						<li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-						<ul class="dropdown-menu">
-							<li><a href="#">Action</a></li>
-							<li><a href="#">Another action</a></li>
-							<li><a href="#">Something else here</a></li>
-							<li role="separator" class="divider"></li>
-							<li><a href="#">Separated link</a></li>
-						</ul>
-					</li>
-				</ul>
-			</div><!-- /.navbar-collapse -->
-		</div><!-- /.container-fluid -->
-	</nav>
-	<!-- Menu end -->
-	<!-- Thumbnails start -->
-	<div class="referenceList" ng-controller="referenceList">
-	    <section class="container" data-iso-repeat="references"></section>
-		<div ng-repeat="reference in references">
-                    <a ng-if="reference.showDescription" ng-class="lightboxHide($index)" href="{{ reference.images[0] }}" data-lightbox="{{reference.cssClass}}" after-render iso-repeat class="referenceItems {{reference.cssClass}} swipebox" style="background-image: url({{reference.thumbnailImg}});"></a>
-			<a ng-class="lightboxHide($index)" ng-repeat="image in reference.images" href="{{image}}" data-lightbox="{{reference.cssClass}}" data-title="{{reference.title}}" after-render iso-repeat class="referenceItems {{reference.cssClass}} swipebox" style="background-image: url({{reference.thumbnailImg}});"></a>
-			<!-- <div ng-repeat="reference in references" after-render class="referenceItems {{reference.cssClass}}" style="background-image: url({{reference.thumbnailImg}});"> -->
-				<!--<img src="{{reference.thumbnailImg}}" alt="{{reference.description}}" />-->
-		</div>
-	</div>
-	<!-- Thumbnails end -->
-	<script type="text/javascript" src="scripts/db.js"></script>
-	<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-	<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-	<script type="text/javascript" src="bower_components/isotope/dist/isotope.pkgd.min.js"></script>
-	<!--<script type="text/javascript" src="bower_components/swipebox/src/js/jquery.swipebox.js"></script>-->
-	<script type="text/javascript" src="bower_components/lightbox2/src/js/lightbox.js"></script>
-	<script type="text/javascript" src="scripts/app.js"></script>
+    <!-- Menu start -->
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Brand</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Link</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">Separated link</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+    <!-- Menu end -->
+    <!-- Thumbnails start -->
+    <div class="referenceList" ng-controller="referenceList">
+        <section class="container" data-iso-repeat="references"></section>
+        <div ng-repeat="reference in references">
+            <a ng-if="reference.showDescription"
+               ng-class="lightboxHide($index)"
+               href="{{ reference.images[0] }}"
+               data-lightbox="{{reference.cssClass}}"
+               data-fancybox-group="{{reference.cssClass}}"
+               after-render
+               iso-repeat
+               title="{{reference.title}}"
+               class="referenceItems {{reference.cssClass}} swipebox fancybox"
+               style="background-image: url({{reference.thumbnailImg}});">
+            </a>
+            <a ng-repeat="image in reference.images"
+               ng-if="reference.images[0] != images"
+               ng-class="lightboxHide($index)"
+               href="{{image}}"
+               data-lightbox="{{reference.cssClass}}"
+               data-fancybox-group="{{reference.cssClass}}"
+               after-render
+               iso-repeat
+               title="{{reference.title}}"
+               class="referenceItems {{reference.cssClass}} swipebox fancybox"
+               style="background-image: url({{reference.thumbnailImg}});">
+            </a>
+        </div>
+    </div>
+    <!-- Thumbnails end -->
+    <script type="text/javascript" src="scripts/db.js"></script>
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+    <script type="text/javascript" src="bower_components/isotope/dist/isotope.pkgd.min.js"></script>
+
+    <!-- Add mousewheel plugin (this is optional) -->
+    <script type="text/javascript" src="bower_components/fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
+    <!-- Add fancyBox main JS and CSS files -->
+    <script type="text/javascript" src="bower_components/fancybox/source/jquery.fancybox.js?v=2.1.5"></script>
+    <!-- Add Button helper (this is optional) -->
+    <script type="text/javascript" src="bower_components/fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+    <!-- Add Thumbnail helper (this is optional) -->
+    <script type="text/javascript" src="bower_components/fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
+    <!-- Add Media helper (this is optional) -->
+    <script type="text/javascript" src="bower_components/fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
+
+    <script type="text/javascript" src="scripts/app.js"></script>
 </body>
 </html>
