grayscale + about page + contact page

--- a/index.html
+++ b/index.html
@@ -16,25 +16,7 @@
     <link rel="stylesheet" type="text/css" href="bower_components/fancybox/source/jquery.fancybox.css?v=2.1.5" media="screen" />
     <link rel="stylesheet" type="text/css" href="bower_components/fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" />
     <link rel="stylesheet" type="text/css" href="bower_components/fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" />
-    <style type="text/css">
-        .isotope_w1_h2, .isotope_w1_h1 {
-            width: 280px;
-        }
-
-        .isotope_w1_h1 {
-            height: 160px;
-        }
-
-        .isotope_w1_h2 {
-            height: 330px;
-        }
-
-        .referenceItems {
-            background-repeat: no-repeat;
-            background-size: contain;
-            display: block;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body ng-app="laszlovector">
     <!-- Menu start -->
@@ -53,17 +35,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Link</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="index.html">References</a></li>
+                    <li><a href="about.html">About me</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
