--- a/contact.html
+++ b/contact.html
@@ -1,49 +1,144 @@
 ﻿<!DOCTYPE html>
+
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+
 <!--[if gt IE 8]><!-->
+
 <html class="no-js">
+
 <!--<![endif]-->
+
 <head>
+
     <meta charset="utf-8" />
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
     <title>Laszlovector</title>
+
     <meta name="description" content="" />
+
     <meta name="viewport" content="width=device-width" />
+
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
+
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" />
+
     <link rel="stylesheet" type="text/css" href="bower_components/fancybox/source/jquery.fancybox.css?v=2.1.5" media="screen" />
+
     <link rel="stylesheet" type="text/css" href="bower_components/fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" />
+
     <link rel="stylesheet" type="text/css" href="bower_components/fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" />
+
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-</head>
-<body ng-app="laszlovector">
-    <!-- Menu start -->
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Brand</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">References</a></li>
-                    <li><a href="about.html">About me</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-    </nav>
-    
+
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+
+    <script>
+        $(function () {
+            $('body').css({ visibility: 'visible' });
+        });
+    </script>
+</head>
+
+<body ng-app="laszlovector">
+
+    <!-- Menu start -->
+
+    <nav class="navbar navbar-default row container">
+
+        <div class="container-fluid">
+
+            <!-- Brand and toggle get grouped for better mobile display -->
+
+            <div class="navbar-header">
+
+               <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+
+                    <span class="sr-only">Toggle navigation</span>
+
+                    <span class="icon-bar"></span>
+
+                    <span class="icon-bar"></span>
+
+                    <span class="icon-bar"></span>
+
+                </button>
+
+                <a class="navbar-brand" href="#">Brand</a>-->
+
+		<a href="/index.html"><img src="/images/laszlovector_logo.png" onmouseover="this.src='/images/laszlovector_logo_hover.png'" onmouseout="this.src='/images/laszlovector_logo.png'" style="border:none;max-width:100%;" alt=""></a>		
+
+
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+                <ul class="nav navbar-nav navbar-right">
+
+                    <li><a href="index.html">references</a></li>
+
+                    <li><a href="about.html">about me</a></li>
+
+                    <li><a href="contact.html" class="self">contact</a></li>
+
+                </ul>
+
+            </div><!-- /.navbar-collapse -->
+
+        </div><!-- /.container-fluid -->
+
+    </nav>
+
+    
+
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+
     <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+
+
+
+
+<div class="contact row container">
+<div class="contact_items">
+<div class="about_line col-lg-12 "></div>
+
+		<div class="about_title col-lg-12 "><h4>lakhely</h4></div>
+		<div class="about_line col-lg-12 "></div>
+			<div class="about_time col-lg-3 "><h4>Budapest</h4></div>
+			<div class="about_text col-lg-9 ">
+				<h3></h3>
+				<p></p>
+			</div>
+
+		<div class="about_title col-lg-12 "><h4>Telefonszám</h4></div>
+		<div class="about_line col-lg-12 "></div>
+			<div class="about_time col-lg-3 "><h4>+36 20 332 7997</h4></div>
+			<div class="about_text col-lg-9 ">
+				<h3></h3>
+				<p></p>
+			</div>
+
+		<div class="about_title col-lg-12 "><h4>Mail</h4></div>
+		<div class="about_line col-lg-12 "></div>
+			<div class="about_time col-lg-3 "><h4>laszlo@filosoft.hu</h4></div>
+			<div class="about_text col-lg-9 ">
+				<h3></h3>
+				<p></p>
+			</div>
+
+</div>
+</div>
+
+
+
 </body>
+
 </html>
