--- a/index.html
+++ b/index.html
@@ -17,61 +17,70 @@
     <link rel="stylesheet" type="text/css" href="bower_components/fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" />
     <link rel="stylesheet" type="text/css" href="bower_components/fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Titillium+Web">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+
 </head>
 <body ng-app="laszlovector">
     <!-- Menu start -->
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
+    <nav class="navbar navbar-default row container">
+        <div class="container-fluid ">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <div class="navbar-header ">
+                <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Brand</a>
+                <a class="navbar-brand" href="#">Brand</a>-->
+                <a href="/index.html"><img src="/images/laszlovector_logo.png" onmouseover="this.src='/images/laszlovector_logo_hover.png'" onmouseout="this.src='/images/laszlovector_logo.png'" style="border:none;max-width:100%;" alt=""></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">References</a></li>
-                    <li><a href="about.html">About me</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html" class="self">references</a></li>
+                    <li><a href="about.html">about me</a></li>
+                    <li><a href="contact.html">contact</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
     <!-- Menu end -->
     <!-- Thumbnails start -->
-    <div class="referenceList" ng-controller="referenceList">
+    <div class="referenceList row container" id="isotopeContainer" ng-controller="referenceList">
         <section class="container" data-iso-repeat="references"></section>
-        <div ng-repeat="reference in references">
-            <a ng-if="reference.showDescription"
-               ng-class="_lightboxHide($index)"
-               href="#{{reference.title}}"
-               data-fancybox-group="fancyGroup"
-               after-render
-               iso-repeat
-               title="{{reference.title}}"
-               class="referenceItems {{reference.cssClass}} swipebox fancybox"
-               style="background-image: url({{reference.thumbnailImg}});">
-            </a>
+        <div ng-repeat="reference in references" after-render>
+            <img ng-if="reference.showDescription && !!!reference.link"
+                 href="#{{reference.title}}"
+                 data-fancybox-group="fancyGroup"
+                 iso-repeat
+                 title="{{reference.title}}"
+                 class="referenceItems {{reference.cssClass}} swipebox fancybox thumnails"
+                 src="{{reference.thumbnailImg}}" />
             <div id="{{reference.title}}" style="display:none;">
                 <span ng-bind-html="reference.description"></span>
             </div>
-            
-            <a ng-repeat="image in reference.images"
-               ng-if="reference.images[0] != images"
-               ng-class="lightboxHide($index, reference.showDescription)"
-               href="{{image}}"
+
+            <img ng-repeat="image in reference.images"
+                 ng-if="reference.images[0] != images && !!!reference.link"
+                 ng-class="lightboxHide($index, reference.showDescription)"
+                 href="{{image}}"
+                 data-fancybox-group="fancyGroup"
+                 iso-repeat
+                 title="{{reference.title}}"
+                 class="referenceItems {{reference.cssClass}} swipebox fancybox thumnails"
+                 src="{{reference.thumbnailImg}}" />
+
+            <a ng-if="!!reference.link"
+               href="{{reference.link}}"
                data-fancybox-group="fancyGroup"
                after-render
                iso-repeat
                title="{{reference.title}}"
                class="referenceItems {{reference.cssClass}} swipebox fancybox"
-               style="background-image: url({{reference.thumbnailImg}});">
-            </a>
+               style="background-image: url({{reference.thumbnailImg}});"
+               </a>
         </div>
     </div>
     <!-- Thumbnails end -->
@@ -81,7 +90,7 @@
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="bower_components/isotope/dist/isotope.pkgd.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-sanitize.min.js"></script>
-    
+
     <!-- Add mousewheel plugin (this is optional) -->
     <script type="text/javascript" src="bower_components/fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
     <!-- Add fancyBox main JS and CSS files -->
@@ -92,7 +101,13 @@
     <script type="text/javascript" src="bower_components/fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
     <!-- Add Media helper (this is optional) -->
     <script type="text/javascript" src="bower_components/fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
-
     <script type="text/javascript" src="scripts/app.js"></script>
+
+    <script>
+        $(function () {
+            $('body').css({ visibility: 'visible' });
+        });
+    </script>
+
 </body>
 </html>
