--- a/about.html
+++ b/about.html
@@ -1,168 +1,335 @@
 ﻿<!DOCTYPE html>
+
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+
 <!--[if gt IE 8]><!-->
+
 <html class="no-js">
+
 <!--<![endif]-->
+
 <head>
+
     <meta charset="utf-8" />
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
     <title>Laszlovector</title>
+
     <meta name="description" content="" />
+
     <meta name="viewport" content="width=device-width" />
+
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
+
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css" />
+
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 
+
+
     <script>
+
         $(function () {
+
             $('body').css({ visibility: 'visible' });
+
         });
+
     </script>
+
 </head>
+
 <body ng-app="laszlovector">
+
     <!-- Menu start -->
+
     <nav class="navbar navbar-default row container">
+
         <div class="container-fluid">
+
             <!-- Brand and toggle get grouped for better mobile display -->
+
             <div class="navbar-header">
+
                 <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+
+
 
                     <span class="sr-only">Toggle navigation</span>
 
-                    <span class="icon-bar"></span>
+
 
                     <span class="icon-bar"></span>
 
+
+
                     <span class="icon-bar"></span>
+
+
+
+                    <span class="icon-bar"></span>
+
+
 
                 </button>
 
+
+
                 <a class="navbar-brand" href="#">Brand</a>-->
+
                 <a href="/index.html"><img src="/images/laszlovector_logo.png" onmouseover="this.src='/images/laszlovector_logo_hover.png'" onmouseout="this.src='/images/laszlovector_logo.png'" style="border:none;max-width:100%;" alt=""></a>
+
             </div>
+
             <!-- Collect the nav links, forms, and other content for toggling -->
+
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
                 <ul class="nav navbar-nav navbar-right">
+
                     <li><a href="index.html">references</a></li>
+
                     <li><a href="about.html" class="self">about me</a></li>
+
                     <li><a href="contact.html">contact</a></li>
+
                 </ul>
+
             </div><!-- /.navbar-collapse -->
+
         </div><!-- /.container-fluid -->
+
     </nav>
 
+
+
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+
     <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
+
+
     <div class="about row container">
+
         <div class="about_me">
-            <div class="about_line col-lg-12 "></div>
+
+            <div class="about_line_out col-lg-12 "><div class="about_line "></div></div>
+
             <div class="about_pix col-lg-3"><img src="images/me.jpg"></div>
+
             <div class="about_text col-lg-9">
+
                 <h2>Fésüs László</h2>
+
                 <h4>1983.október 24.</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+
+                <p>Az alkalmazott grafika nem csak a szakmám, hanem egyben a hobbim is. Azt a filozófiát vallom amit Raymond Loewy fogalmazta meg jól: „Most advanced yet accetable”. Ezt a mondatot én úgy értelmezem, hogy az embernek mindig élen kell járnia a technológia fejlődésével együtt, egészen addig a határig amíg ez valóban hasznára van az adott projectnek. Igyekszek 3 szinten foglalkozni a feladatokkal: a megfelelő kreatív kivitelezés mint tervezőgrafikus evidens, és emellett szívesen foglalkozok a feladat marketing-hátterével (célcsoport, költséghatékonyság, megfelelő tervezési irány), és nagyon fontosnak tartom hogy a technológiai háttér a legoptimálisabb és modernebb legyen ami elérhető.</p>
+
             </div>
+
             <div class="about_linx col-lg-9">
+
                 <a href="/images/cv/cv_fl_eng.pdf" target="_blank"><img src="/images/pdf_eng.png" onmouseover="this.src='/images/pdf_eng_hover.png'" onmouseout="this.src='/images/pdf_eng.png'" style="border:none;max-width:100%;" alt=""></a>
+
                 <a href="/images/cv/cv_fl_hun.pdf" target="_blank"><img src="/images/pdf_hun.png" onmouseover="this.src='/images/pdf_hun_hover.png'" onmouseout="this.src='/images/pdf_hun.png'" style="border:none;max-width:100%;" alt=""></a>
 
+
+
             </div>
+
         </div>
 
+
+
         <div class="about_cv">
+
             <div class="about_title col-lg-12 "><h4>szakmai tapasztalat</h4></div>
-            <div class="about_line col-lg-12 "></div>
+
+            <div class="about_line_out col-lg-12 "><div class="about_line "></div></div>
+
             <div class="about_time col-lg-3 "><h4>2013-2016</h4></div>
+
             <div class="about_text col-lg-9 ">
+
                 <h3>Sisel International (USA), Organo Gold (Canada)</h3>
+
                 <p>A nemzetközi cég európai online és offline médiaigényeit valósítom meg.</p>
+
                 <h3>Freelancer grafikus</h3>
+
                 <p>Online és offline grafikai tervezés, arculattervezés, UI/UX és sitebuild külsős munkatársként különböző ügyfeleknek, többek között Port.hu, Chello CE, Kreatív Európa (EU) és Sony Pictures Entertainment.</p>
+
                 <h3>Forrai Művészeti Szakiskola </h3>
+
                 <p>Alkalmazott grafika a gyakorlati életben - vendégelőadó<br>Magántanár (grafikai tervezés) </p>
+
             </div>
+
+
 
             <div class="about_time col-lg-3 "><h4>2011-2013</h4></div>
+
             <div class="about_text col-lg-9 ">
+
                 <h3>Full Market Zrt.</h3>
+
                 <p>Hiper.hu webáruház és Hiperdiszkont hipermarket online és offline arculati kialakitása, reklámanyagok, bannerek, reklámújságok készítése, teljes vállalati médiaigények megvalósítása, kezdetben art directorral, később önállóan. <br>eTotem Informatikai Kereskedelmi és Szolgáltató Zrt.: <br>Érintőpados technológián alapuló eszközökhöz, webshophoz kapcsolódó grafikai munkák (user-interface, reklámbannerek, stb.), céges arculati elemek, reklámok, látványtervek, és egyéb kreatívok tervezése.</p>
+
             </div>
+
+
 
             <div class="about_time col-lg-3 "><h4>2010-2011</h4></div>
+
             <div class="about_text col-lg-9 ">
+
                 <h3>Kaméleon Reklám Kft.</h3>
+
                 <p>Csomagolástervezés és egyéb reklámügynökségi munkák.</p>
+
             </div>
+
+
 
             <div class="about_time col-lg-3 "><h4>2007-2010</h4></div>
+
             <div class="about_text col-lg-9 ">
+
                 <h3>POS Media Hungary Kft. (POS Media Europe, IMIGe)</h3>
+
                 <p>A cég médiaigényeinek kiszolgálása; promociós anyagok készítése (katalógus, kiadványmegjelenés, hírlevél, banner, DTP-kreatív és egyéb médiafelületek). Aktívan részt vettem a POS Media hazai és nemzetközi arculatának kialakításában.</p>
+
             </div>
+
+
 
             <div class="about_time col-lg-3 "><h4>2006-2007</h4></div>
+
             <div class="about_text col-lg-9 ">
+
                 <h3>Filosoft ABC Kft.</h3>
+
                 <p>DTP-kreatívok és webdesign tervezése külsős munkatársként a legkülönbözőbb ügyfeleknek.</p>
+
             </div>
+
+
 
             <div class="about_title col-lg-12 "><h4>képzések</h4></div>
-            <div class="about_line col-lg-12 "></div>
+
+            <div class="about_line_out col-lg-12 "><div class="about_line "></div></div>
+
             <div class="about_time col-lg-3 "><h4>2004-2011</h4></div>
+
             <div class="about_text col-lg-9 ">
+
                 <h3>Budapesti Corvinus Egyetem - Kertészmérnök szak</h3>
+
                 <p></p>
+
             </div>
 
+
+
             <div class="about_time col-lg-3 "><h4>1998-2002</h4></div>
+
             <div class="about_text col-lg-9 ">
+
                 <h3>Szinyei Merse Pál Gimnázium, Budapest</h3>
+
                 <p></p>
+
             </div>
+
+
+
 
 
             <div class="about_title col-lg-12 "><h4>nyelvismeret</h4></div>
-            <div class="about_line col-lg-12 "></div>
+
+            <div class="about_line_out col-lg-12 "><div class="about_line "></div></div>
+
             <div class="about_time col-lg-3 "><h4></h4></div>
+
             <div class="about_text col-lg-9 ">
+
                 <h3></h3>
+
                 <p>Angol (közép szint)</p>
+
             </div>
+
+
+
 
 
             <div class="about_title col-lg-12 "><h4>technikai készségek</h4></div>
-            <div class="about_line col-lg-12 "></div>
+
+            <div class="about_line_out col-lg-12 "><div class="about_line "></div></div>
+
             <div class="about_time col-lg-3 "><h4></h4></div>
+
             <div class="about_text col-lg-9 ">
+
                 <h3></h3>
+
                 <p>Multimédia softwarek:<br>- Adobe: Photoshop, Illustrator, Indesign, Fireworks, Flash, Edge, Dreamweaver<br>- Corel Draw, QuarkXPress - Fruity Loops, Soundforge<br>HTML, HTML5, CSS, SASS, Less, Grunt, Bootstrap, Sitebuild, Responsive Web Design, UI/UX Design, Wireframe</p>
+
             </div>
+
+
+
 
 
             <div class="about_title col-lg-12 "><h4>személyes készségek</h4></div>
-            <div class="about_line col-lg-12 "></div>
+
+            <div class="about_line_out col-lg-12 "><div class="about_line "></div></div>
+
             <div class="about_time col-lg-3 "><h4></h4></div>
+
             <div class="about_text col-lg-9 ">
+
                 <h3></h3>
+
                 <p>- Technológiai újdonságokra való nyitottság és készség<br>- Jó szervezőképesség, csapatszellem</p>
+
             </div>
+
+
+
 
 
             <div class="about_title col-lg-12 "><h4>hobbi</h4></div>
-            <div class="about_line col-lg-12 "></div>
+
+            <div class="about_line_out col-lg-12 "><div class="about_line "></div></div>
+
             <div class="about_time col-lg-3 "><h4></h4></div>
+
             <div class="about_text col-lg-9 ">
+
                 <h3></h3>
+
                 <p>Filmek, zene, utazás, sport.</p>
+
             </div>
+
+
 
         </div>
 
+
+
     </div>
 
+
+
 </body>
+
 </html>
