--- a/contact.html
+++ b/contact.html
@@ -38,10 +38,16 @@
 
     <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 
+
+
     <script>
+
         $(function () {
+
             $('body').css({ visibility: 'visible' });
+
         });
+
     </script>
 </head>
 
@@ -108,10 +114,10 @@
 
 <div class="contact row container">
 <div class="contact_items">
-<div class="about_line col-lg-12 "></div>
+<div class="about_line_out col-lg-12 "><div class="about_line "></div></div>
 
 		<div class="about_title col-lg-12 "><h4>lakhely</h4></div>
-		<div class="about_line col-lg-12 "></div>
+		<div class="about_line_out col-lg-12"><div class="about_line "></div></div>
 			<div class="about_time col-lg-3 "><h4>Budapest</h4></div>
 			<div class="about_text col-lg-9 ">
 				<h3></h3>
@@ -119,7 +125,7 @@
 			</div>
 
 		<div class="about_title col-lg-12 "><h4>Telefonszám</h4></div>
-		<div class="about_line col-lg-12 "></div>
+		<div class="about_line_out col-lg-12 "><div class="about_line "></div></div>
 			<div class="about_time col-lg-3 "><h4>+36 20 332 7997</h4></div>
 			<div class="about_text col-lg-9 ">
 				<h3></h3>
@@ -127,7 +133,7 @@
 			</div>
 
 		<div class="about_title col-lg-12 "><h4>Mail</h4></div>
-		<div class="about_line col-lg-12 "></div>
+		<div class="about_line_out col-lg-12 "><div class="about_line "></div></div>
 			<div class="about_time col-lg-3 "><h4>laszlo@filosoft.hu</h4></div>
 			<div class="about_text col-lg-9 ">
 				<h3></h3>
