--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">Brand</a>-->
-                <a href="/index.html"><img src="/images/laszlovector_logo.png" onmouseover="this.src='/images/laszlovector_logo_hover.png'" onmouseout="this.src='/images/laszlovector_logo.png'" style="border:none;max-width:100%;" alt=""></a>
+                <a class="logo" href="/index.html"><img src="/images/laszlovector_logo.png" onmouseover="this.src='/images/laszlovector_logo_hover.png'" onmouseout="this.src='/images/laszlovector_logo.png'" style="border:none;max-width:100%;" alt=""></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -57,7 +57,9 @@
                  iso-repeat
                  title="{{reference.title}}"
                  class="referenceItems {{reference.cssClass}} swipebox fancybox thumnails"
-                 src="{{reference.thumbnailImg}}" />
+                 src="{{reference.thumbnailImg}}"
+                 data-description="{{reference.description}}"
+                  />
             <div id="{{reference.title}}" style="display:none;">
                 <span ng-bind-html="reference.description"></span>
             </div>
@@ -70,7 +72,9 @@
                  iso-repeat
                  title="{{reference.title}}"
                  class="referenceItems {{reference.cssClass}} swipebox fancybox thumnails"
-                 src="{{reference.thumbnailImg}}" />
+                 src="{{reference.thumbnailImg}}" 
+                 data-description="{{reference.description}}"
+                 />
 
             <a ng-if="!!reference.link"
                href="{{reference.link}}"
@@ -80,6 +84,8 @@
                title="{{reference.title}}"
                class="referenceItems {{reference.cssClass}} swipebox fancybox"
                style="background-image: url({{reference.thumbnailImg}});"
+               data-description="{{reference.description}}"
+               >
                </a>
         </div>
     </div>
