--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 
             <div class="navbar-header">
 
-               <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
 
                     <span class="sr-only">Toggle navigation</span>
 
@@ -75,7 +75,7 @@
 
                 </button>
 
-                <a class="navbar-brand" href="#">Brand</a>-->
+                <a class="navbar-brand" href="#">Brand</a>
 
 		<a href="/index.html"><img src="/images/laszlovector_logo.png" onmouseover="this.src='/images/laszlovector_logo_hover.png'" onmouseout="this.src='/images/laszlovector_logo.png'" style="border:none;max-width:100%;" alt=""></a>		
 
