--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
 
 
 
-                <a class="navbar-brand" href="#">Brand</a>
+                <a class="navbar-brand" href="#"></a>
 
                 <a href="/index.html"><img src="/images/laszlovector_logo.png" onmouseover="this.src='/images/laszlovector_logo_hover.png'" onmouseout="this.src='/images/laszlovector_logo.png'" style="border:none;max-width:100%;" alt=""></a>
 
